fix: react-slider prevent white space on the left

--- a/frontend/src/components/sliderStyle.scss
+++ b/frontend/src/components/sliderStyle.scss
@@ -1,7 +1,10 @@
+.slick-track {
+    margin-left: 0;
+}
 
 .slick-list {
     margin-left: 24px;
-    margin-right: 24px;    
+    margin-right: 24px;
 }
 
 .slick-slide div {
